Updated font color for buttons.

--- a/style.css
+++ b/style.css
@@ -51,6 +51,6 @@ button{
 	font-family: 'Trebuchet MS', sans-serif;
 	font-size: 80%;
 	background-color: white;
-	color: rgb(83,128,149);
+	color: black;
 	
 }
